RESOLVED FIXED225457
assertion m_numParameters >= 0 is always true
https://bugs.webkit.org/show_bug.cgi?id=225457
Summary assertion m_numParameters >= 0 is always true
Eleni Maria Stea
Reported 2021-05-06 08:50:46 PDT
In Source/JavaScriptCore/bytecode/CodeBlock.h the assertion: ASSERT(m_numParameters >= 0); is always true as m_numParameters is unsigned.
Attachments
Patch (1.34 KB, patch)
2021-05-06 09:11 PDT, Eleni Maria Stea
no flags
Eleni Maria Stea
Comment 1 2021-05-06 09:11:47 PDT
EWS
Comment 2 2021-05-06 19:13:13 PDT
Committed r277153 (237440@main): <https://commits.webkit.org/237440@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427891 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-06 19:14:18 PDT
Note You need to log in before you can comment on or make changes to this bug.