Removed the assertion m_numParameters >= 0, it is always true as m_numParameters is unsigned. https://bugs.webkit.org/show_bug.cgi?id=225457

Patch by Eleni Maria Stea <estea@igalia.com> on 2021-05-06
Reviewed by Yusuke Suzuki.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::numberOfArgumentValueProfiles):

Canonical link: https://commits.webkit.org/237440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277153 268f45cc-cd09-0410-ab3c-d52691b4dbfc